cloudbuilder/fileserver-deployment.yaml
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "fileserver"
  namespace: "default"
  labels:
    app: "fileserver"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "fileserver"
  template:
    metadata:
      labels:
        app: "fileserver"
    spec:
      containers:
      - name: "fileserver-image"
        image: "gcr.io/gke-pipeline-savelee-192517/fileserver-image:latest"
        volumeMounts:
          - name: mykeys
            mountPath: /var/secrets/
            readOnly: true
        ports:
        - containerPort: 3000  
      volumes:
      - name: mykeys
        secret:
          secretName: credentials
