cloudbuilder/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatserver-service
spec:
  type: NodePort
  selector:
    app: chatserver
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: LoadBalancer
  loadBalancerIP: 35.244.225.55
  selector:
    app: front-end
  ports:
      #how other other pods access our pod
    - port: 80
      protocol: TCP
      #port on target pods (multi-client pod) service talks 
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
