cloudbuilder/_old-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: futurebank
    kubernetes.io/ingress.class: "gce"
  name: ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: front-end-service
          servicePort: 80
        path: /
      - backend:
          serviceName: front-end-service
          servicePort: 80
        path: /*
      - backend:
          serviceName: chatserver-service
          servicePort: 3000
        path: /socket.io
      - backend:
          serviceName: chatserver-service
          servicePort: 3000
        path: /socket.io/*
      - backend:
          serviceName: django-service
          servicePort: 8080
        path: /api/*
---
apiVersion: v1
kind: Service
metadata:
  name: chatserver-service
spec:
  type: NodePort
  selector:
    app: chatserver
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: NodePort
  selector:
    app: front-end
  ports:
      #how other other pods access our pod
    - port: 80
      protocol: TCP
      #port on target pods (multi-client pod) service talks 
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
